--- a/SistemaGestionPeliculas/nbproject/project.properties
+++ b/SistemaGestionPeliculas/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SistemaGestionPeliculas
-main.class=backend.GestorPeliculas
+main.class=backend.Reporte
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
